# Gob-kb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: validate.yml
docs/: architecture.md  authoring.md  content_types.md
knowledge/: _schema.yaml
knowledge/benchmarks/osa_health/: _node.yaml  content.md
knowledge/chat_templates/: README.md
knowledge/concepts/osa/: _node.yaml  content.md
knowledge/concepts/psl/: _node.yaml  content.md
knowledge/detections/transfer_issue/: _node.yaml  content.md
knowledge/diagnostics/transfer_issue/: _node.yaml  content.md
knowledge/domains/: README.md
knowledge/global/narration_rules/: _node.yaml  content.md
knowledge/metric_relationships/: README.md
knowledge/metric_relationships/osa_drives_psl/: _node.yaml  content.md
knowledge/metrics/osa/: _node.yaml
knowledge/metrics/psl/: _node.yaml
knowledge/output_specs/availability_section/: _node.yaml  content.md
knowledge/playbooks/availability_diagnosis/: _node.yaml  content.md
knowledge/procedures/availability_diagnosis/: _node.yaml  content.md
knowledge/recipes/: README.md
knowledge/report_sections/availability_section/: _node.yaml  content.md
knowledge/templates/: README.md
knowledge/thresholds/osa_health/: _node.yaml  content.md
src/gobiq_knowledge/: __init__.py  loader.py  rag.py  schema.py
src/gobiq_knowledge/assemblers/: __init__.py  chat.py  report.py
tests/: test_references.py  test_schema.py  test_traversals.py
